GNOME Bugzilla – Bug 705267
Compilation failed with "./configure --with-minimum"
Last modified: 2013-08-03 19:55:07 UTC
Tried with both git trunk and libxml2-2.9.1.tar.gz versions. When I want to build a minimum-size library with '--minimum' configure options, libxml2 build fail: $> ./configure --with-minimum ... $> make make all-recursive make[1]: entrant dans le répertoire « /home/gbour/PERSO/libxml2 » Making all in include make[2]: entrant dans le répertoire « /home/gbour/PERSO/libxml2/include » Making all in libxml make[3]: entrant dans le répertoire « /home/gbour/PERSO/libxml2/include/libxml » make[3]: Rien à faire pour « all ». make[3]: quittant le répertoire « /home/gbour/PERSO/libxml2/include/libxml » make[3]: entrant dans le répertoire « /home/gbour/PERSO/libxml2/include » make[3]: Rien à faire pour « all-am ». make[3]: quittant le répertoire « /home/gbour/PERSO/libxml2/include » make[2]: quittant le répertoire « /home/gbour/PERSO/libxml2/include » Making all in . make[2]: entrant dans le répertoire « /home/gbour/PERSO/libxml2 » CC encoding.lo encoding.c: In function ‘xmlCharEncOutput’: encoding.c:2417:36: error: dereferencing pointer to incomplete type encoding.c:2418:16: error: dereferencing pointer to incomplete type encoding.c:2418:44: error: dereferencing pointer to incomplete type encoding.c:2420:17: error: dereferencing pointer to incomplete type encoding.c:2421:16: error: dereferencing pointer to incomplete type encoding.c:2435:19: error: dereferencing pointer to incomplete type encoding.c:2436:25: error: dereferencing pointer to incomplete type encoding.c:2479:15: error: dereferencing pointer to incomplete type encoding.c:2480:21: error: dereferencing pointer to incomplete type encoding.c:2532:5: error: invalid use of undefined type ‘struct _xmlOutputBuffer’ make[2]: *** [encoding.lo] Erreur 1
Created attachment 250763 [details] [review] Add additional defines checks Only code place move and add 'ifdef' statements, without any code changes.
Thanks Denis for the patch, makes senses ! Pushed to git as commit e28c8a1acef3047cceae1035924edae5e903a778 thanks Guillaume for raising the issue ! Daniel
\o/ it works ! thank you both for having fixed it so fast