#705267 - add additional defines checks for support "./configure --with-minimum"

https://bugzilla.gnome.org/show_bug.cgi?id=705267